pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: django-pod
  labels:
    app: django-app 
spec:
  containers:
    - name: django
      image: talhashahzad0/instaclone:v1.0
      imagePullPolicy: IfNotPresent  # Use local image if available
      ports:
        - containerPort: 8000
      volumeMounts:
        - name: static-volume
          mountPath: /app/staticfiles
        - name: media-volume
          mountPath: /app/media
  volumes:
    - name: static-volume
      emptyDir: {}
    - name: media-volume
      emptyDir: {}
